platform-charts/templates/custom-apps/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.localhost`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: platform-headers
          namespace: traefik
        - name: platform-ratelimit
          namespace: traefik
        - name: platform-retry
          namespace: traefik
